--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 <body>
 
   <main class="card">
+    <picture>
       <img  class="card-img" src="./images/image-equilibrium.jpg" alt="">
-      <!-- <img class="img-hover" src="./images/icon-view.svg" alt=""> -->
-    <h2>
+      <div class="overlay"></div>
+    </picture>
+      <h2>
       <a class="link" href="#">
         Equilibrium #3429
       </a>
