--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <main class="card">
     <picture>
       <img  class="card-img" src="./images/image-equilibrium.jpg" alt="">
-      <div class="overlay"></div>
+      <img class="overlay" src="./images/icon-view.svg" alt="eye icon over image">
     </picture>
       <h2>
       <a class="link" href="#">
@@ -49,7 +49,8 @@
     <section>
       <img src="./images/image-avatar.png" alt="">
       Creation of <a class="link" href="#"> Jules Wyvern</a>
-    </section>
+    </section> 
+
   </main>
     
   <footer class="attribution">
